--- a/nginx/frontend/style/results.css
+++ b/nginx/frontend/style/results.css
@@ -11,7 +11,7 @@
 .share {
   margin-top: 20px;
   padding: 10px 20px;
-  background-color: #2196F3;
+  background-color: #2195f3c3;
   color: #ffffff;
   border: none;
   border-radius: 4px;
@@ -43,7 +43,7 @@
   box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
   width: 600px;
   height: auto;
-  background-color: #ffffff;
+  background-color: #181a1b;
   padding: 20px 30px; /* Added padding: 20px on top and bottom, 30px on left and right */
   z-index: 1;
 }
@@ -51,6 +51,7 @@
 .card h3 {
   font-size: 22px;
   font-weight: 600;
+  color: #dfdfdf;
   margin-bottom: 20px;
 }
 
@@ -65,7 +66,7 @@
 .result h4 {
   font-size: 16px;
   font-weight: 400;
-  color: #2e2e2e;
+  color: #dfdfdf;
   margin-bottom: 10px;
 }
 
